# jewel

./: .gitignore  .projectile  Makefile  README.md  block.py  checksum.py  client.py  config.ini  do.py  fileserver.py  init.sh  log.py  models.py  networking.py  peer.py  run-client.sh  run.sh  server.py  setup.cfg  setup.py  striping.py  tox.ini
abe/: labor.txt
abe/payments/pending/: payment-1.txt
disk/: a.txt
jewel/: block.py  bytes.py  config.py  do.py  file.py  fileserver.py  jewel.py  list.py  log.py  metadata.py  models.py  names.py  networking.py  peer.py  recovery.py  sharding.py  striping.py
jewel/scheme/: __init__.py  base.py  hosting.py  naive.py
jewel/scheme/recovery/: __init__.py  base.py
jewel/scheme/redundant/: __init__.py  base.py  naive.py
jewel/scheme/sharded/: __init__.py  base.py  parity.py  redundant.py  sharded.py  vanilla.py
jewel/scheme/sharded/redundant/: __init__.py  base.py  parity.py  reedsolomon.py  shardshard.py
jewel/scheme/striped/: __init__.py  base.py
scheme/: __init__.py  naive.py  sharded.py
scripts/: init-client.sh  init-fileserver.sh  init-peer.sh  init-peers.sh  run-peer.sh  run-peers.sh
