[bumpversion]
current_version = 0.0.0
commit = True
tag = True

[metadata]
description_file = README.md

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:jewel/__init__.py]

[aliases]
test = pytest

[tool:pytest]
addopts = -p pudb -p sugar
